Edited for img local delete

--- a/client/src/admin/components/loading.scss
+++ b/client/src/admin/components/loading.scss
@@ -101,6 +101,7 @@
 
   .miniload-wrapper{
     display: flex;
+    align-items: center;
     width: 100%;
     justify-content: center;
     z-index: 2;
