--- a/client/src/admin/admin.scss
+++ b/client/src/admin/admin.scss
@@ -108,7 +108,7 @@ button{
         border-bottom: 0.5px solid grey;
         border-top: 0.5px solid grey;
 
-        .sub{
+        .activehref{
             display: flex;
             align-items: center;
             gap: 5px;
@@ -122,7 +122,7 @@ button{
             border-radius: 10px;
            }
         }
-        .sub.on{
+        .activehref.on{
             display: flex;
             align-items: center;
             gap: 5px;
