--- a/client/src/admin/components/config.scss
+++ b/client/src/admin/components/config.scss
@@ -24,7 +24,7 @@ $black: #000;
     @media screen and (max-width:767px){
         
         .setHere{
-            margin-left: 220px;
+            margin-left: 120vw;
         }
     }
 
