--- a/client/src/components/components.scss
+++ b/client/src/components/components.scss
@@ -956,6 +956,7 @@ a:hover{
         .footer{
             justify-content: space-between;
             width: 100%;
+            padding: 10px;
             div{
             width: 32%;
         }
