--- a/client/src/components/components2.scss
+++ b/client/src/components/components2.scss
@@ -114,6 +114,7 @@ textarea{
     background-image: url('../assets/imgbg1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;
     color: #fff;
    position: relative;
 }
